# derpy-wm

./: Cargo.toml  config.toml  sxhkd-config  todo.md
src/: event_handlers.rs  lib.rs  main.rs  reconciler.rs  scratchpad.rs  workspaces.rs
