[package]
name = "derpy-wm"
version = "0.1.0"
authors = ["DerpyCrabs <derpycrabs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = "derpywm"
path = "src/lib.rs"

[[bin]]
name = "derpy-wm"
path = "src/main.rs"